# slurm_test

./: TODO
sim_test_dir/: INSTALL  install.pl  list_trace  patki.pl  patki.trace  reset.sh  rpc_threads.info  slurmctld.maps  test_command.cmd  users.sim
sim_test_dir/slurm-2.3.2-simulator/: META  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  config.xml  configure  configure.ac  libtool  sim_patch.2.2.6  slurm.spec
sim_test_dir/slurm-2.3.2-simulator/.hg/: dirstate  hgrc  undo.desc
sim_test_dir/slurm-2.3.2-simulator/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sim_test_dir/slurm-2.3.2-simulator/auxdir/: Makefile  Makefile.in  slurm.m4  x_ac_debug.m4
sim_test_dir/slurm-2.3.2-simulator/contribs/: Makefile  Makefile.in
sim_test_dir/slurm-2.3.2-simulator/doc/: Makefile  Makefile.in
sim_test_dir/slurm-2.3.2-simulator/src/: Makefile  Makefile.am  Makefile.am.rej  Makefile.in
sim_test_dir/slurm-2.3.2-simulator/src/simulation_lib/: Makefile  Makefile.am  Makefile.in  libslurm_sim.la  patki.trace  qos.sim  sim_lib.c  sim_lib.lo  sim_mgr.c  slurm_sim.h  trace_builder  trace_builder.c  update_trace.c  users.sim
sim_test_dir/slurm-2.3.2-simulator/src/simulation_lib/.deps/: list_trace.Po  sim_ctlr.Po  sim_lib.Plo  sim_mgr.Po  trace_builder.Po  update_trace.Po
sim_test_dir/slurm-2.3.2-simulator/src/simulation_lib/.libs/: libslurm_sim.la  libslurm_sim.so.0
sim_test_dir/slurm-2.3.2-simulator/testsuite/: Makefile  Makefile.in
sim_test_dir/slurm_conf/: slurm.cert  slurm.conf  slurm.nodes  slurmdbd.conf
(+3191 files in other folders)
